--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Exercise 0</title>
   </head>
   <body>
-    <h1>10 Questions</h1>
+    <h1>10 Questions - a classroom workshop</h1>
 
     <p> <strong>Instructions</strong> Find a partner. Ask your partner the
     questions below. Record your partners answers next to the questions.</p>
