--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>Do you park in the driveway or drive in the parkway?<em>Yes</em></li>
         <li>Subs or Dubs?<em>Dubs</em></li>
         <li>Do you like waffles?<em>Yeah I like waffles</em></li>
-        <li>If you could be an anial, what animal would you be?<em>A dog</em></li>
+        <li>If you could be an animal, what animal would you be?<em>A dog</em></li>
         <li>What is the answer to everything?<em>I dunno</em></li>
 
       </ul>
