--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Ceasar Howe</title>
   <link rel="stylesheet" href="css/master.css">
   <body>
-
+      <h1><a href="e0/index.html">Exercise 0</a></h1>
   </body>
 </html>
