--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <link rel="stylesheet" href="css/master.css">
   <body>
       <h1><a href="e0/index.html">Exercise 0</a></h1>
+      <h1><a href="e1/index.html">Exercise 1</a></h1>
+      <h1><a href="e2/index.html">Exercise 2</a></h1>
+
   </body>
 </html>
