--- a/e2/index.html
+++ b/e2/index.html
@@ -4,6 +4,7 @@
     <title>Exercise 2</title>
   </head>
   <body>
+    <link rel="stylesheet" href="../css/master.css">
     <img src="images/e2.png" alt="itdontwork">
   </body>
 </html>
