--- a/e3/index.html
+++ b/e3/index.html
@@ -4,6 +4,7 @@
     <title>Exercise 3</title>
   </head>
   <body>
+    <link rel="stylesheet" href="../css/master.css">
     <img src="images/e3.png" alt="itdontwork">
 
   </body>
