--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
   <head>
 
   </head>
-  <title>Ceasar Howe</title>
+  <title>Ceasar's Page</title>
   <link rel="stylesheet" href="css/master.css">
   <body>
       <h1><a href="e0/index.html">Exercise 0</a></h1>
