--- a/e1/index.html
+++ b/e1/index.html
@@ -4,6 +4,7 @@
     <title>Exercise 1</title>
   </head>
   <body>
+    <link rel="stylesheet" href="../css/master.css">
     <img src="images/e1-1.png" alt="itdontwork">
     <img src="images/e1-2.png" alt="itdontwork">
     <img src="images/e1-3.png" alt="itdontwork">
