--- a/e0/index.html
+++ b/e0/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Exercise 0</title>
   </head>
+  <link rel="stylesheet" href="../css/master.css">
   <body>
     <h1>10 Questions - a classroom workshop</h1>
 
