--- a/e1/index.html
+++ b/e1/index.html
@@ -5,11 +5,10 @@
   </head>
   <link rel="stylesheet" href="../css/master.css">
   <body>
-
-    <img src="images/e1-1.png" alt="itdontwork">
-    <img src="images/e1-2.png" alt="itdontwork">
-    <img src="images/e1-3.png" alt="itdontwork">
-    <img src="images/e1-4.png" alt="itdontwork">
-    <img src="images/e1-5.png" alt="itdontwork">
+    <h1><a href="1/index.html">Image 1</a></h1>
+    <h1><a href="2/index.html">Image 2</a></h1>
+    <h1><a href="3/index.html">Image 3</a></h1>
+    <h1><a href="4/index.html">Image 4</a></h1>
+    <h1><a href="5/index.html">Image 5</a></h1>
   </body>
 </html>
