--- a/e1/5/index.html
+++ b/e1/5/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Exercise 1</title>
   </head>
-  <link rel="stylesheet" href="../css/master.css">
+  <link rel="stylesheet" href="../../css/master.css">
   <body>
 
     <img src="e1-5.png" alt="itdontwork">
