--- a/e4/index.html
+++ b/e4/index.html
@@ -6,10 +6,10 @@
 <link rel="stylesheet" href="main.css">
 <body>
   <h1><a href="../index.html">Home</a></h1>
-  <div>
+  <div id="special">
     <h2>Seven Principles of Typographic Contrast</h2>
 
-    <h4>In a seminal booklet that he both designed and wrote, Carl Dair showed how in typography, as in music, harmony and contrast are the keys to composition.</h4>
+    <p class="intro">In a seminal booklet that he both designed and wrote, Carl Dair showed how in typography, as in music, harmony and contrast are the keys to composition.</p>
 
     <h3>Written by John D. Berry</h3>
 
@@ -23,7 +23,7 @@
 
       <h4>Harmony and Contrast</h4>
 
-      <p>The heart of Carl Dair's teaching -- the thing that I keep pointing people to, and the most valuable thing I myself learned from his work -- is the subject of "A Typographic Quest" No. 5: "Typographic Contrast." In a virtuoso performance, Dair shows exactly how designers use different kinds of visual contrast to make design work and meaning pop out -- clearly and unambiguously, and with flair. To make his point, he compares typography to music.
+      <p class="intro">The heart of Carl Dair's teaching -- the thing that I keep pointing people to, and the most valuable thing I myself learned from his work -- is the subject of "A Typographic Quest" No. 5: "Typographic Contrast." In a virtuoso performance, Dair shows exactly how designers use different kinds of visual contrast to make design work and meaning pop out -- clearly and unambiguously, and with flair. To make his point, he compares typography to music.
 
       Graphic form and musical form have a common denominator: rhythm and emphasis, harmony and contrast. "Harmony and contrast," says Dair, "are fundamental to both, and the discovery of these basic principles and their application to the design of printed matter is the object of this volume of 'A Typographic Quest.'"</p>
 
