--- a/p1/pg3/index.html
+++ b/p1/pg3/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <title>Project 1 Page 3</title>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="../css/main.css">
   <body>
       <p>In the fell clutch of circumstance
       I have not winced nor cried <a href="../pg4/index.html"> aloud.</a> </p>
