--- a/p1/pg4/index.html
+++ b/p1/pg4/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <title>Project 1 Page 4</title>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="../css/main.css">
   <body>
       <p>Under the bludgeonings of chance
       My head is bloody, but<a href="../pg5/index.html"> unbowed.</a> </p>
