--- a/p1/pg5/index.html
+++ b/p1/pg5/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <title>Project 1 Page 5</title>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="../css/main.css">
   <body>
       <p>Beyond this place of wrath and tears
       Looms but the Horror of the <a href="../pg6/index.html">shade,</a> </p>
