--- a/p1/pg6/index.html
+++ b/p1/pg6/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <title>Project 1 Page 6</title>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="../css/main.css">
   <body>
       <p>And yet the menace of the years
       Finds and shall find me<a href="../pg7/index.html"> unafraid.</a> </p>
