--- a/p1/pg7/index.html
+++ b/p1/pg7/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <title>Project 1 Page 7</title>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="../css/main.css">
   <body>
       <p>It matters not how strait the <a href="../pg8/index.html"> gate,</a> </p>
 
