--- a/p1/index.html
+++ b/p1/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <title>Project 1 Page 1</title>
-  <link rel="stylesheet" href="../css/master.css">
+  <link rel="stylesheet" href="css/main.css">
   <body>
       <p>Out of the night that covers me,
       Black as the pit from pole to <a href="pg2/index.html">pole</a> </p>
