--- a/p1/pg10/index.html
+++ b/p1/pg10/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <title>Project 1 Page 10</title>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="../css/main.css">
   <body>
       <p>I am the Captain of my <a href="../index.html"> Soul.</a> </p>
 
