--- a/p1/pg8/index.html
+++ b/p1/pg8/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <title>Project 1 Page 8</title>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="../css/main.css">
   <body>
       <p>How charged with punishments the <a href="../pg9/index.html"> scroll, </a> </p>
 
