--- a/p1/pg9/index.html
+++ b/p1/pg9/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <title>Project 1 Page 9</title>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="../css/main.css">
   <body>
       <p>I am the master of my<a href="../pg10/index.html"> fate,</a> </p>
 
