--- a/p1/index.html
+++ b/p1/index.html
@@ -6,9 +6,11 @@
   </head>
   <title>Project 1 Page 1</title>
   <link rel="stylesheet" href="css/main.css">
-  <body>
-      <p>Out of the night that covers me,
-      Black as the pit from pole to <a href="pg2/index.html">pole</a> </p>
+  <body id="starry">
+    <div class="top1"><p>Out of the night that covers me,</p> </div>
+    <div class="bottom1"><p>
+    Black as the pit from pole to <a href="pg2/index.html">pole</a> </p></div>
+
 
 
   </body>
