--- a/p1/pg2/index.html
+++ b/p1/pg2/index.html
@@ -6,7 +6,7 @@
   </head>
   <title>Project 1 Page 2</title>
   <link rel="stylesheet" href="../css/main.css">
-  <body>
+  <body  id="starry">
       <p>I thank whatever gods may be,
       For my unconquerable <a href="../pg3/index.html">soul.</a> </p>
 
