--- a/p1/index.html
+++ b/p1/index.html
@@ -9,7 +9,7 @@
   <body id="starry">
     <div class="top1"><p>Out of the night that covers me,</p> </div>
     <div class="bottom1"><p>
-    Black as the pit from pole to <a href="pg2/index.html">pole</a> </p></div>
+    Black as the pit from pole to <a href="pg2/index.html">pole.</a> </p></div>
 
 
 
