--- a/p1/pg2/index.html
+++ b/p1/pg2/index.html
@@ -7,8 +7,13 @@
   <title>Project 1 Page 2</title>
   <link rel="stylesheet" href="../css/main.css">
   <body  id="starry">
-      <p>I thank whatever gods may be,
-      For my unconquerable <a href="../pg3/index.html">soul.</a> </p>
+    <div class="top2">
+      <p>I thank <br>whatever gods <br>may <br>be,</p>
+    </div>
+    <div class="bottom2">
+      <p>For my<br> <a href="../pg3/index.html">unconquerable soul.</a></p>
+
+    </div>
 
 
   </body>
