--- a/p1/index.html
+++ b/p1/index.html
@@ -7,6 +7,10 @@
   <title>Project 1 Page 1</title>
   <link rel="stylesheet" href="css/main.css">
   <body id="starry">
+    <div class="title">
+      <h1> INVICTUS </h1>
+      <h3>By William Ernest Henley</h3>
+    </div>
     <div class="top1"><p>Out of the night that covers me,</p> </div>
     <div class="bottom1"><p>
     Black as the pit from pole to <a href="pg2/index.html">pole.</a> </p></div>
