--- a/p1/pg10/index.html
+++ b/p1/pg10/index.html
@@ -6,7 +6,7 @@
   </head>
   <title>Project 1 Page 10</title>
   <link rel="stylesheet" href="../css/main.css">
-  <body>
+  <body id="starry">
       <p>I am the Captain of my <a href="../index.html"> Soul.</a> </p>
 
 
