--- a/p1/index.html
+++ b/p1/index.html
@@ -6,7 +6,7 @@
   </head>
   <title>Project 1 Page 1</title>
   <link rel="stylesheet" href="css/main.css">
-  <body>
+  <body class="starry">
       <p>Out of the night that covers me,
       Black as the pit from pole to <a href="pg2/index.html">pole</a> </p>
 
