--- a/p1/index.html
+++ b/p1/index.html
@@ -7,8 +7,12 @@
   <title>Project 1 Page 1</title>
   <link rel="stylesheet" href="css/main.css">
   <body class="starry">
-      <p>Out of the night that covers me,
-      Black as the pit from pole to <a href="pg2/index.html">pole</a> </p>
+    <div class="top1">
+      <p>Out of the night that covers me,</p>
+    </div>
+    <div class="bot1">
+        <p>Black as the pit from pole to <a href="pg2/index.html">pole</a></p>
+    </div>
 
 
   </body>
