--- a/p1/pg2/index.html
+++ b/p1/pg2/index.html
@@ -6,12 +6,12 @@
   </head>
   <title>Project 1 Page 2</title>
   <link rel="stylesheet" href="../css/main.css">
-  <body  id="starry">
+  <body  class="starry">
     <div class="top2">
       <p>I thank <br>whatever gods <br>may <br>be,</p>
     </div>
     <div class="bottom2">
-      <p>For my<br> <a href="../pg3/index.html">unconquerable soul.</a></p>
+      <p>For my<br> <a href="../pg3/index.html">unconquerable soul</a>.</p>
 
     </div>
 
