--- a/p1/pg3/index.html
+++ b/p1/pg3/index.html
@@ -6,10 +6,13 @@
   </head>
   <title>Project 1 Page 3</title>
   <link rel="stylesheet" href="../css/main.css">
-  <body  id="starry">
-      <p>In the fell clutch of circumstance
-      I have not winced nor cried <a href="../pg4/index.html"> aloud.</a> </p>
-
+  <body  class="starry">
+    <div class="top3">
+        <p>In the fell clutch of circumstance</p>
+    </div>
+    <div class="bottom3">
+        <p>I have not winced nor cried <a href="../pg4/index.html"> aloud</a>.</p>
+    </div>
 
   </body>
 </html>
