--- a/p1/pg6/index.html
+++ b/p1/pg6/index.html
@@ -6,7 +6,7 @@
   </head>
   <title>Project 1 Page 6</title>
   <link rel="stylesheet" href="../css/main.css">
-  <body>
+  <body class="starry">
       <p>And yet the menace of the years
       Finds and shall find me<a href="../pg7/index.html"> unafraid.</a> </p>
 
