--- a/p1/pg8/index.html
+++ b/p1/pg8/index.html
@@ -6,7 +6,7 @@
   </head>
   <title>Project 1 Page 8</title>
   <link rel="stylesheet" href="../css/main.css">
-  <body>
+  <body class="starry">
       <p>How charged with punishments the <a href="../pg9/index.html"> scroll, </a> </p>
 
 
