--- a/p1/pg10/index.html
+++ b/p1/pg10/index.html
@@ -7,7 +7,11 @@
   <title>Project 1 Page 10</title>
   <link rel="stylesheet" href="../css/main.css">
   <body class="starry">
-      <p>I am the Captain of my <a href="../index.html"> Soul.</a> </p>
+
+    <div class="top0">
+            <p>I am the Captain <br><br> of my <a href="../index.html"> Soul.</a> </p>
+    </div>
+
 
 
   </body>
