--- a/p1/pg3/index.html
+++ b/p1/pg3/index.html
@@ -11,7 +11,7 @@
         <p>In the fell clutch of circumstance</p>
     </div>
     <div class="bottom3">
-        <p>I have not winced nor cried <a href="../pg4/index.html"> aloud</a>.</p>
+        <p>I have not winced nor cried <a href="../pg4/index.html"> aloud</a></p>
     </div>
 
   </body>
