--- a/p1/pg4/index.html
+++ b/p1/pg4/index.html
@@ -7,8 +7,13 @@
   <title>Project 1 Page 4</title>
   <link rel="stylesheet" href="../css/main.css">
   <body class="starry">
-      <p>Under the bludgeonings of chance
-      My head is bloody, but<a href="../pg5/index.html"> unbowed.</a> </p>
+    <div class="top2">
+      <p>Under the bludgeonings of chance</p>
+    </div>
+    <div class="bottom2">
+      <p>My head is bloody but<br><a href="../pg5/index.html">unbowed</a> </p>
+    </div>
+
 
 
   </body>
