--- a/p1/pg5/index.html
+++ b/p1/pg5/index.html
@@ -7,8 +7,14 @@
   <title>Project 1 Page 5</title>
   <link rel="stylesheet" href="../css/main.css">
   <body class="starry">
-      <p>Beyond this place of wrath and tears
-      Looms but the Horror of the <a href="../pg6/index.html">shade,</a> </p>
+    <div class="top1" id="pg5">
+      <p>Beyond this place of <br>wrath and tears</p>
+    </div>
+
+    <div class="bottom1">
+      <p>Looms but the Horror <br>of the <a href="../pg6/index.html">shade</a> </p>
+    </div>
+
 
 
   </body>
