--- a/p1/pg6/index.html
+++ b/p1/pg6/index.html
@@ -7,8 +7,12 @@
   <title>Project 1 Page 6</title>
   <link rel="stylesheet" href="../css/main.css">
   <body class="starry">
-      <p>And yet the menace of the years
-      Finds and shall find me<a href="../pg7/index.html"> unafraid.</a> </p>
+    <div class="top6">
+      <p>And yet the menace of the years</p>
+    </div>
+    <div class="bottom6">
+      <p>Finds <br><br> and shall find me <br><br> <a href="../pg7/index.html">unafraid</a> </p>
+    </div>
 
 
   </body>
