--- a/p1/pg7/index.html
+++ b/p1/pg7/index.html
@@ -7,7 +7,10 @@
   <title>Project 1 Page 7</title>
   <link rel="stylesheet" href="../css/main.css">
   <body class="starry">
-      <p>It matters not how strait the <a href="../pg8/index.html">gate,</a> </p>
+    <div class="top7">
+            <p>It matters not how strait the <a href="../pg8/index.html">gate</a> </p>
+    </div>
+
 
 
   </body>
