--- a/p1/pg9/index.html
+++ b/p1/pg9/index.html
@@ -7,7 +7,11 @@
   <title>Project 1 Page 9</title>
   <link rel="stylesheet" href="../css/main.css">
   <body class="starry">
-      <p>I am the master of my<a href="../pg10/index.html"> fate,</a> </p>
+
+    <div class="top9">
+            <p>I am the master of my<a href="../pg10/index.html"> fate</a> </p>
+    </div>
+
 
 
   </body>
