--- a/p1/index.html
+++ b/p1/index.html
@@ -11,10 +11,10 @@
       <h1> INVICTUS </h1>
       <h3>By William Ernest Henley</h3>
     </div>
-    
+
     <div class="top1"><p>Out of the night that covers me,</p> </div>
     <div class="bottom1"><p>
-    Black as the pit from pole to <a href="pg2/index.html">pole</a>.</p></div>
+    Black as the pit from pole to <a href="pg2/index.html">pole</a></p></div>
 
 
 
