--- a/p1/pg2/index.html
+++ b/p1/pg2/index.html
@@ -11,7 +11,7 @@
       <p>I thank <br>whatever gods <br>may <br>be,</p>
     </div>
     <div class="bottom2">
-      <p>For my<br> <a href="../pg3/index.html">unconquerable soul</a>.</p>
+      <p>For my<br> <a href="../pg3/index.html">unconquerable soul</a></p>
 
     </div>
 
