--- a/p1/pg8/index.html
+++ b/p1/pg8/index.html
@@ -7,7 +7,11 @@
   <title>Project 1 Page 8</title>
   <link rel="stylesheet" href="../css/main.css">
   <body class="starry">
-      <p>How charged with punishments the <a href="../pg9/index.html"> scroll, </a> </p>
+
+    <div class="top8">
+      <p>How charged with punishments the <a href="../pg9/index.html"> scroll</a>,</p>
+    </div>
+
 
 
   </body>
