--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
       <h1><a href="e9/index.html">Exercise 9</a></h1>
       <h1><a href="e10/index.html">Exercise 10</a></h1>
       <h1><a href="p1/index.html">Project1</a></h1>
+      <h1><a href="p2/index.html">Project2</a></h1>
   </body>
 </html>
