--- a/e10/index.html
+++ b/e10/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../css/master.css">
   <body>
 
-    <img src="wireframe.jpg" alt="itdontwork">
+    <img class="turnt" src="wireframe.jpg" alt="itdontwork">
 
   </body>
 </html>
