--- a/p2/wireframe/index.html
+++ b/p2/wireframe/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Exercise 1</title>
   </head>
-  <link rel="stylesheet" href="../css/master.css">
+  <link rel="stylesheet" href="../css/main.css">
   <body>
 
     <img src="../images/wireframe.jpg" alt="itdontwork">
