--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <h1><a href="e8/index.html">Exercise 8</a></h1>
       <h1><a href="e9/index.html">Exercise 9</a></h1>
       <h1><a href="e10/index.html">Exercise 10</a></h1>
+      <h1><a href="e11/index.html">Exercise 11</a></h1>
+
+      <br>
       <h1><a href="p1/index.html">Project1</a></h1>
       <h1><a href="p2/index.html">Project2</a></h1>
   </body>
