--- a/e11/2/index.html
+++ b/e11/2/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html >
   <head>
-    <title>Exercise 1</title>
+    <title>Exercise 11 Page 3</title>
   </head>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="main.css">
   <body>
 
-    <img src="custom–2.png" alt="itdontwork">
+
 
   </body>
 </html>
