--- a/e11/4/index.html
+++ b/e11/4/index.html
@@ -3,9 +3,8 @@
   <head>
     <title>Exercise 1</title>
   </head>
-  <link rel="stylesheet" href="../../css/master.css">
+  <link rel="stylesheet" href="main.css">
   <body>
-    <img src="custom–4.png" alt="itdontwork">
 
   </body>
 </html>
