--- a/e11/4/index.html
+++ b/e11/4/index.html
@@ -5,6 +5,31 @@
   </head>
   <link rel="stylesheet" href="main.css">
   <body>
+    <div class="topbar">
+
+    </div>
+    <div class="greenbar">
+
+    </div>
+    <div class="authorbar">
+
+    </div>
+
+    <div class="textbox">
+
+    </div>
+
+    <div class="midbar">
+
+    </div>
+
+    <div class="greenbar">
+
+    </div>
+
+    <div class="textbox">
+
+    </div>
 
   </body>
 </html>
