--- a/p2/index.html
+++ b/p2/index.html
@@ -8,5 +8,6 @@
   <link rel="stylesheet" href="css/main.css">
   <body>
       <h1><a href="wireframe/index.html">wireframe</a></h1>
+      <h1><a href="fd/index.html">First Draft</a></h1>
   </body>
 </html>
