--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <h1><a href="e10/index.html">Exercise 10</a></h1>
       <h1><a href="e11/index.html">Exercise 11</a></h1>
       <h1><a href="e12/index.html">Exercise 12</a></h1>
+      <h1><a href="e11/index.html">Exercise 13</a></h1>
+      <h1><a href="e14/index.html">Exercise 14</a></h1>
 
       <br>
       <h1><a href="p1/index.html">Project1</a></h1>
