--- a/p2/index.html
+++ b/p2/index.html
@@ -9,5 +9,6 @@
   <body>
       <h1><a href="wireframe/index.html">wireframe</a></h1>
       <h1><a href="fd/index.html">First Draft</a></h1>
+      <h1><a href="draft2/index.html">Second Draft</a></h1>
   </body>
 </html>
