--- a/p3/index.html
+++ b/p3/index.html
@@ -19,24 +19,25 @@
 
     <div class="background_pic">
       <div class="flag">
-        
+
       </div>
-      <h1>Hafa Adai</h1>
+      <img src="images/flag.png" alt="test" id="flgimg">
+      <h1 id="welcome">Hafa Adai</h1>
     </div>
     <div class="panelContainer">
 
       <div class="panel1">
-        <div class="image">
-
-        </div>
+        <img src="images/culture.jpg" alt="test" class="img1">
         <div class="title">
-
+            <h2>Culture</h2>
         </div>
         <div class="text">
-
+            <p>Come and join us and explor Guams unique local culture. Guam is proud of its Chamorro culture, and we want to share it with you! Visit local workshops throughout the island to learn the dances, language, and crafts of our island.</p>
+              <br><br>
+            <p>Prefer to see the attractions Guam has to offer? want to experience the local fairs? A diverse mix of festivals and carnivals throughout the year give everyone something to look forward to.</p>
         </div>
         <div class="link">
-
+          <p href="../index.html">See local festivals, attractions, and more!</p>
         </div>
       </div>
 
