--- a/p3/index.html
+++ b/p3/index.html
@@ -37,8 +37,12 @@
             <p>Prefer to see the attractions Guam has to offer? want to experience the local fairs? A diverse mix of festivals and carnivals throughout the year give everyone something to look forward to.</p>
         </div>
         <div class="link">
-          <p href="../index.html">See local festivals, attractions, and more!</p>
+          <p> <a href="../index.html">See local festivals, attractions, and more!</a> </p>
         </div>
+      </div>
+
+      <div class="bar">
+
       </div>
 
       <div class="panel2">
@@ -56,6 +60,10 @@
         </div>
       </div>
 
+      <div class="bar">
+
+      </div>
+
       <div class="panel1">
         <div class="image">
 
@@ -69,6 +77,10 @@
         <div class="link">
 
         </div>
+      </div>
+
+      <div class="bar">
+
       </div>
 
       <div class="panel2">
