--- a/halloween-img/index.html
+++ b/halloween-img/index.html
@@ -20,7 +20,12 @@
 
 
     <div class="ghosthead">
+      <div class="eyel">
 
+      </div>
+      <div class="eyer">
+
+      </div>
     </div>
     <div class="ghostbody">
 
