--- a/p3/index.html
+++ b/p3/index.html
@@ -45,18 +45,38 @@
 
       </div>
 
-      <div class="panel2">
+      <div class="panel1">
+        <img src="images/food.jpg" alt="test" class="img1">
         <div class="title">
-
+            <h2>Cuisine</h2>
         </div>
         <div class="text">
-
-        </div>
-        <div class="image">
-
+            <p>Come and join us and explor Guams unique local culture. Guam is proud of its Chamorro culture, and we want to share it with you! Visit local workshops throughout the island to learn the dances, language, and crafts of our island.</p>
+              <br><br>
+            <p>Prefer to see the attractions Guam has to offer? want to experience the local fairs? A diverse mix of festivals and carnivals throughout the year give everyone something to look forward to.</p>
         </div>
         <div class="link">
+          <p> <a href="../index.html">Explore local resteraunts.</a> </p>
+        </div>
 
+      </div>
+
+      <div class="bar">
+
+      </div>
+
+      <div class="panel1">
+        <img src="images/night.jpg" alt="test" class="img1">
+        <div class="title">
+            <h2>Night Life</h2>
+        </div>
+        <div class="text">
+            <p>Guam abounds with nightlife, suitable for all ages. Family fun could include the Chamorro Village Wednesday Night Market, which offers food and the chance to bring locally made products home. Take a stroll through Tumon and visit one of the many welcoming displays found especially during the holiday season.</p>
+              <br><br>
+            <p>If it's bars and clubs, Tumon is the place to be, offering live music, lounge singers and DJs as well as a host of places to dance. Check out the local newspapers to find out if any visiting bands will be performing. There are also a few web sites dedicated to keeping people informed about who's doing what and where.</p>
+        </div>
+        <div class="link">
+          <p> <a href="../index.html">See local events and locations</a> </p>
         </div>
       </div>
 
@@ -65,36 +85,17 @@
       </div>
 
       <div class="panel1">
-        <div class="image">
-
-        </div>
+        <img src="images/beaches.jpg" alt="test" class="img1">
         <div class="title">
-
+            <h2>Beaches</h2>
         </div>
         <div class="text">
-
+            <p>Guam abounds with nightlife, suitable for all ages. Family fun could include the Chamorro Village Wednesday Night Market, which offers food and the chance to bring locally made products home. Take a stroll through Tumon and visit one of the many welcoming displays found especially during the holiday season.</p>
+              <br><br>
+            <p>If it's bars and clubs, Tumon is the place to be, offering live music, lounge singers and DJs as well as a host of places to dance. Check out the local newspapers to find out if any visiting bands will be performing. There are also a few web sites dedicated to keeping people informed about who's doing what and where.</p>
         </div>
         <div class="link">
-
-        </div>
-      </div>
-
-      <div class="bar">
-
-      </div>
-
-      <div class="panel2">
-        <div class="title">
-
-        </div>
-        <div class="text">
-
-        </div>
-        <div class="image">
-
-        </div>
-        <div class="link">
-
+          <p> <a href="../index.html">Explore Guams beautiful beaches</a> </p>
         </div>
       </div>
 
