--- a/p3/index.html
+++ b/p3/index.html
@@ -65,7 +65,7 @@
 
       </div>
 
-      <div class="panel1">
+      <div class="panel1" id="nightlife">
         <img src="images/night.jpg" alt="test" class="img1">
         <div class="title">
             <h2>Night Life</h2>
@@ -84,7 +84,7 @@
 
       </div>
 
-      <div class="panel1">
+      <div class="panel1" id="beach">
         <img src="images/beaches.jpg" alt="test" class="img1">
         <div class="title">
             <h2>Beaches</h2>
