--- a/p3/index.html
+++ b/p3/index.html
@@ -37,9 +37,14 @@
             <h2>Culture</h2>
         </div>
         <div class="text">
-            <p>Come and join us and explor Guams unique local culture. Guam is proud of its Chamorro culture, and we want to share it with you! Visit local workshops throughout the island to learn the dances, language, and crafts of our island.</p>
-              <br><br>
-            <p>Prefer to see the attractions Guam has to offer? want to experience the local fairs? A diverse mix of festivals and carnivals throughout the year give everyone something to look forward to.</p>
+          <p>Inhabited for thousands of years archaeological evidence indicates that the Marianas Islands were one of the first places to be settled by seafaring peoples, possibly from Island Southeast Asia, over 4000 years ago. The Mariana Islands appear to have been continuously occupied by people who shared the same culture and language that eventually became known as Chamorro.</p>
+
+          <p>Come and join us and explor Guams unique local culture. Guam is proud of its Chamorro culture, and we want to share it with you! Visit local workshops throughout the island to learn the dances, language, and crafts of our island.</p>
+
+            <p>There is always something to celebrate on Guam, and we welcome our visitors to join us. Each of our island's 19 villages has its own festival day, or fiesta, where it's not unusual to see a village mayor working alongside the rest of the community to ensure the celebration is a success. Fiestas are a lively and intimate way for our visitors to get acquainted with the cultures of Guam's small but vibrant municipalities. Each village on Guam is united around its own patron saint, Catholic church, and a favorite town gathering place, providing the perfect setting for an authentic Chamorro cultural experience on fiesta day. </p>
+
+          <p class="hide">Prefer to see the attractions Guam has to offer? want to experience the local fairs? A diverse mix of festivals and carnivals throughout the year give everyone something to look forward to.</p>
+
         </div>
         <div class="link">
           <p> <a href="../index.html">See local festivals, attractions, and more!</a> </p>
