--- a/p3/index.html
+++ b/p3/index.html
@@ -61,9 +61,13 @@
             <h2>Cuisine</h2>
         </div>
         <div class="text">
+            <p>While family and faith is at the center of Chamorro culture, both often find their place at the fiesta table. Within the flower shape on the cover of our Guam Guide, you’ll find some of our island’s favorite foods – from red rice to chicken kelaguen. Please take time to explore our local cuisine and discover the fiesta table. It is there – during mealtimes – where families come together, new friendships are made, and old ones rekindled.</p>
+
+            <p>The native food of Guam is largely based on what early ancestors could gather, grow and hunt from the land, plus what they could catch and harvest from the ocean. The Tree of Life, the coconut, offered much in the way of copra, oil, coconut water and coconut milk, as did many other fruit and vegetables.</p>
+            <p>Fish and other seafood, and edible seaweed were bountiful, and later, colonial and occupational times allowed for more crops, better farming methods and a consistent harvest from Guam's lush volcanic soils.</p>
+            <p class="hide">Guam is a leader in Pacific Rim cuisine and is at the forefront of the culinary revolution that embraced the world in the mid-90s. Its many talented cooks and chefs constantly push the standards of flavors and presentations, and it is easy to find a world-class meal on Guam.</p>
+
             <p>Come and join us and explor Guams unique local culture. Guam is proud of its Chamorro culture, and we want to share it with you! Visit local workshops throughout the island to learn the dances, language, and crafts of our island.</p>
-              <br><br>
-            <p>Prefer to see the attractions Guam has to offer? want to experience the local fairs? A diverse mix of festivals and carnivals throughout the year give everyone something to look forward to.</p>
         </div>
         <div class="link">
           <p> <a href="../index.html">Explore local resteraunts.</a> </p>
@@ -82,8 +86,10 @@
         </div>
         <div class="text">
             <p>Guam abounds with nightlife, suitable for all ages. Family fun could include the Chamorro Village Wednesday Night Market, which offers food and the chance to bring locally made products home. Take a stroll through Tumon and visit one of the many welcoming displays found especially during the holiday season.</p>
-              <br><br>
+
             <p>If it's bars and clubs, Tumon is the place to be, offering live music, lounge singers and DJs as well as a host of places to dance. Check out the local newspapers to find out if any visiting bands will be performing. There are also a few web sites dedicated to keeping people informed about who's doing what and where.</p>
+            <p>There’s a good chance that if you walk into any hotel on the Tumon strip, there will be live music of some sort – completely free! Local music icons like dynamic duo Jesse and Ruby can be found playing nightly at the Outrigger Resort Guam; jazz pianist Patrick Palomo plays at Dusit Thani Guam Resort on Sundays and Mondays; and rock/reggae group The John Dank Show plays Saturdays and every other Wednesday at Abandon Ship. Other spots in Tumon known for their live music scene include Livehouse, Cowboy Ninja, and The Beach Bar and Grill.  </p>
+            <p>For an adrenaline spike, Tagada Amusement Park is where to go for heart-pounding thrills in Tumon. Jump on the bumper cars for a bone-jarring ride; hold tight on the Tagada Disco as it bounces you to the beat; and set sail on The Viking and take in the view as you’re swung into the Tumon sky. Tickets are sold separately or in packages and at special rates for members. Tagada is open from 3 p.m. to midnight on weekends, and 4 p.m. to 11:30 p.m. on weekdays. </p>
         </div>
         <div class="link">
           <p> <a href="../index.html">See local events and locations</a> </p>
@@ -100,9 +106,11 @@
             <h2>Beaches</h2>
         </div>
         <div class="text">
-            <p>Guam abounds with nightlife, suitable for all ages. Family fun could include the Chamorro Village Wednesday Night Market, which offers food and the chance to bring locally made products home. Take a stroll through Tumon and visit one of the many welcoming displays found especially during the holiday season.</p>
-              <br><br>
-            <p>If it's bars and clubs, Tumon is the place to be, offering live music, lounge singers and DJs as well as a host of places to dance. Check out the local newspapers to find out if any visiting bands will be performing. There are also a few web sites dedicated to keeping people informed about who's doing what and where.</p>
+            <p>Crystalized waves and fun water activities make Guam’s sandy white beaches the perfect vacation getaway. Pack your swimsuit and sun-screen and enjoy Guam’s endless number of beach options.</p>
+
+            <p>Tumon is known for its beautiful beaches along its shores. Many hotels on the beach side provide bungalows for activities like banana boating and kayaking. These water activities provide an excellent opportunity to experience the waters of Guam firsthand. If you are not in such an adventurous mood, the vibrant colors and soothing sounds provide an excellent environment for lounging on the sand while achieving the perfect sun-kissed skin. If you decide to dip in for a swim, the waters are calm enough for relaxation while providing sufficient waves for beach play. If the daytime scene isn’t convincing enough, the sunsets will take your breath away. Shades of orange and pink contrast against the deepening shade of the ocean to create the perfect ambiance for a romantic walk on the beach.</p>
+
+            <p>Guam’s world-renowned beaches are famous for the perfect temperature of the waters. It isn’t too hot or too cold. You can comfortably enjoy swimming in the cool waters as you take in the gorgeous view of palm trees and ocean.</p>
         </div>
         <div class="link">
           <p> <a href="../index.html">Explore Guams beautiful beaches</a> </p>
