--- a/p3/index.html
+++ b/p3/index.html
@@ -5,6 +5,7 @@
 
   </head>
   <title>Ceasar's Page</title>
+  <meta name="viewport" content="width-device-width, initial-scale=1">
   <link rel="stylesheet" href="main.css">
   <body>
     <div class="topbar">
