--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   </head>
   <title>Ceasar's Page</title>
+  <meta name="viewport" content="width-device-width, initial-scale=1">
   <link rel="stylesheet" href="css/master.css">
   <body>
       <h1><a href="e0/index.html">Exercise 0</a></h1>
