--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <h1><a href="e11/index.html">Exercise 13</a></h1>
       <h1><a href="e14/index.html">Exercise 14</a></h1>
       <h1><a href="e17/index.html">Exercise 17</a></h1>
+      <h1><a href="e18/index.html">Exercise 18</a></h1>
 
       <br>
       <h1><a href="p1/index.html">Project 1</a></h1>
