--- a/p5/index.html
+++ b/p5/index.html
@@ -11,7 +11,7 @@
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
   <body>
-    <button onclick="makeButton()">Add a Button</button>
+    <button onclick="makeButton()" class="begin">Add a Button</button>
 
     <script type="text/javascript" src="main.js">
 
